# titan-homiai

./: .env.example  Dockerfile  Dockerfile.worker  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/versions/: 20260509_0002_device_auth_users.py  20260509_0003_user_credits.py  20260509_0005_design_soft_delete.py  20260512_0009_user_onboarding_flag.py  20260517_0012_device_credit_grants.py  20260518_0013_saved_items.py
app/core/: config.py  security.py
app/services/design_generation/: __init__.py  fal.py  models.py  service.py
app/services/higgsfield/: client.py
app/services/object_replace/: fal_service.py  router.py  schemas.py  storage.py
app/services/platform/: credit_service.py  revenuecat_api.py  router.py
app/services/platform/endpoints/: auth.py  credits.py  design.py  saved.py  subscriptions.py
app/services/platform/models/: __init__.py  credit.py  design.py  device_credit.py  saved.py  user.py
app/services/platform/schemas/: auth.py  credits.py  saved.py  subscription.py
app/services/r2/: __init__.py  client.py
app/workers/: tasks.py  worker.py
nginx/conf.d/: titan-prod.conf  titan.conf
tests/: test_auth_device_login.py  test_cleanup_user_data_task.py  test_design_history_listing.py  test_object_replace.py  test_saved_items_api.py  test_worker_fallback_charge.py
