[project]
name = "titan"
version = "1.0.0"
description = "High-performance multi-service API platform by Antmind Ventures Private Limited"
requires-python = ">=3.13"

dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.2",
    "gunicorn==23.0.0",
    "pydantic==2.11.4",
    "pydantic-settings==2.9.1",
    "sqlalchemy[asyncio]==2.0.41",
    "asyncpg==0.30.0",
    "alembic==1.15.2",
    "pgvector==0.4.1",
    "psycopg2-binary==2.9.10",
    "redis[hiredis]==5.3.0",
    "arq==0.26.3",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "cryptography==44.0.2",
    "loguru==0.7.3",
    "boto3==1.37.38",
    "psutil==7.0.0",
    "python-multipart==0.0.20",
    "httpx==0.28.1",
    "fal-client==1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ── Ruff — linter + formatter ──────────────────────────────────────────────────
[tool.ruff]
target-version = "py313"
line-length = 100
src = ["app"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes  (undefined names, unused imports)
    "I",    # isort     (import order)
    "B",    # bugbear   (likely bugs & design issues)
    "C4",   # comprehensions
    "UP",   # pyupgrade (modern Python syntax)
    "SIM",  # simplify  (simplifiable expressions)
    "RUF",  # ruff-specific rules
    "S",    # bandit    (security)
    "T20",  # no print statements in production code
]
ignore = [
    "B008",   # FastAPI Depends() / Query() calls in function defaults
    "S101",   # assert usage (fine in non-test code here)
    "SIM108", # ternary can reduce readability
    "S104",   # binding to 0.0.0.0 — intentional for containers
    "S603",   # subprocess — not used but pre-emptive ignore
]

[tool.ruff.lint.per-file-ignores]
"alembic/*" = ["F401"]  # imported models are used by Alembic, not directly

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
